# Assemblr_old

./: .gitignore  Display.drawio  Documentation.md  LICENSE  LICENSE.md  Log.csv  README.md  TODO  UI Design.drawio  assemblr.py  config.json  ev.sh  figlet_test_output.txt  file-parse.py  filetree.md  index.js  package-lock.json  package.json  preload.js  pyproject.toml  pyvenv.cfg  test.asr  test2.asr  testfile01.asr  version  working_assemblr.py
Design/: TUI Design
Design/Sprites/: Assemblr Logo
README-resources/: Display.drawio  Untitled Diagram.drawio
Tests/01 - Basic File Parsing/: file-parse.py  testfile01.asr  testfile01.asrom  testfile02.asr
Tests/02 - Memory Reading and Writing/: InstructionSet.md  assemblr.py
Tests/02 - Printing out Glyphs/: printer.py
Tests/03 - GUI Tests - PYGAME/: address_from_cli.py  helloworld-pygame.py  turn leds on off.py
Tests/04 - GUI Tests - Tkinter/: helloworld.py  pretty gui.py  resizable window.py
Tests/05 - Colors Class/: colors.py  colors_dict.py
assets/: globalStyles.css  menu.js
cd/: pyvenv.cfg
cli/: app.py  cli.py  menu.py  registers.py  system.py
cli_only/: config.json  main.py  startup.py
emulator/: assembler.js  cpu.js  emulator.js  memory.js
main/: main.py  testfile01.asrom  testfile02.asrom  testfile03.asrom
old_cli/: instruction_set.py
old_cli_2/: app.py  cli.py  menu.py
scripts/: main.js  render.js
src/: index.js  package-lock.json
templates/: container.html
themes/: templatetheme.json
tmp/: index.html
views/: basic.html  editor.html  game.html  home.html  index.html  menu.html
(+36 files in other folders)
